--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Single Vendor App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="home_title">Home</string>
+    <string name="pizzas_title">Pizzas</string>
+    <string name="burgers_title">Burgers</string>
+    <string name="rolls_title">Rolls</string>
+    <string name="drinks_title">Drinks</string>
 </resources>
