Added complete functionality in PendingOrdersFragment.kt, added bouncing effect in CartActivity.kt RecyclerView, and fixed last item removal bug in CartActivity.kt RecyclerView.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="slideViewHandleDesc">Slide View Handle</string>
     <string name="no_of_items_slideview">3 Items in Your Cart</string>
     <string name="price_placeholder">Rs. 3340</string>
+    <string name="name_placeholder">Name</string>
+    <string name="phone_placeholder">Phone No.</string>
+    <string name="address_placeholder">Address</string>
 </resources>
